--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,13 +2,18 @@
 # $ conda create --name <env> --file <this file>
 # platform: osx-arm64
 blinker=1.8.1=pyhd8ed1ab_0
+brotli-python=1.1.0=py311ha891d26_1
 bzip2=1.0.8=h93a5062_5
 ca-certificates=2024.2.2=hf0a4a13_0
+certifi=2024.2.2=pyhd8ed1ab_0
+charset-normalizer=3.3.2=pyhd8ed1ab_0
 click=8.1.7=unix_pyh707e725_0
 flask=3.0.3=pyhd8ed1ab_0
+idna=3.7=pyhd8ed1ab_0
 importlib-metadata=7.1.0=pyha770c72_0
 itsdangerous=2.2.0=pyhd8ed1ab_0
 jinja2=3.1.3=pyhd8ed1ab_0
+libcxx=17.0.6=h5f092b4_0
 libexpat=2.6.2=hebf3989_0
 libffi=3.4.2=h3422bc3_5
 libsqlite=3.45.3=h091b4b1_0
@@ -17,12 +22,16 @@ markupsafe=2.1.5=py311h05b510d_0
 ncurses=6.4.20240210=h078ce10_0
 openssl=3.3.0=h0d3ecfb_0
 pip=24.0=pyhd8ed1ab_0
+pysocks=1.7.1=pyha2e5f31_6
 python=3.11.9=h932a869_0_cpython
+python-dotenv=1.0.1=pyhd8ed1ab_0
 python_abi=3.11=4_cp311
 readline=8.2=h92ec313_1
+requests=2.31.0=pyhd8ed1ab_0
 setuptools=69.5.1=pyhd8ed1ab_0
 tk=8.6.13=h5083fa2_1
 tzdata=2024a=h0c530f3_0
+urllib3=2.2.1=pyhd8ed1ab_0
 werkzeug=3.0.3=pyhd8ed1ab_0
 wheel=0.43.0=pyhd8ed1ab_1
 xz=5.2.6=h57fd34a_0
